syntax = "proto3";

option go_package = "github.com/NeptuneG/go-back/api/proto/auth";
package api.proto.auth;

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse { string token = 1; }

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse { string token = 1; }
